testsuite/tests/typecheck/should_fail/T19415.stderr

T19415.hs:27:8: error:
    • Couldn't match type ‘[Char]’ with ‘Char’
        arising from a functional dependency between:
          constraint ‘SetField "name" (Pet a0) (Pet b) Char’
            arising from a use of ‘setField’
          instance ‘SetField "name" (Pet a) (Pet b1) String’
            at T19415.hs:(23,3)-(24,60)
    • In the expression: setField @"name" 'c' (Pet "hi")
      In an equation for ‘loop’: loop = setField @"name" 'c' (Pet "hi")
